--- a/front/package.json
+++ b/front/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^6.0.2",
     "bootstrap": "3.3.6",
     "core-js": "^2.5.4",
-    "jquery": "^1.9.1",
+    "jquery": "^3.3.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
